--- a/BeingChef/app/src/main/AndroidManifest.xml
+++ b/BeingChef/app/src/main/AndroidManifest.xml
@@ -38,12 +38,24 @@
         <activity
         android:name=".WelcomeActivity"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme.NoActionBar" >>
+        android:theme="@style/AppTheme.NoActionBar" >
         <!--<intent-filter>-->
             <!--<action android:name="android.intent.action.MAIN" />-->
             <!--<category android:name="android.intent.category.LAUNCHER" />-->
         <!--</intent-filter>-->
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".SignupActivity"
+            android:label="@string/title_activity_login"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ResetPasswordActivity"
+            android:label="@string/title_activity_reset_password"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <service
             android:name=".FetchAddressIntentService"
             android:exported="false"/>
