--- a/BeingChef/app/build.gradle
+++ b/BeingChef/app/build.gradle
@@ -35,9 +35,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.firebase:firebase-core:11.0.2'
     compile 'com.google.android.gms:play-services:11.0.2'
+    compile 'com.google.firebase:firebase-database:11.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.synnapps:carouselview:0.1.4'
+    compile 'com.roughike:bottom-bar:2.3.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
