--- a/BeingChef/app/src/main/AndroidManifest.xml
+++ b/BeingChef/app/src/main/AndroidManifest.xml
@@ -56,6 +56,13 @@
             android:name=".ResetPasswordActivity"
             android:label="@string/title_activity_reset_password"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".AccountActivity"
+            android:label="@string/title_activity_reset_password"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".AddItemListActivity"
+            android:label="AddItemList"></activity>
         <service
             android:name=".FetchAddressIntentService"
             android:exported="false"/>
